updated password generator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <textarea readonly id="password" placeholder="Your Secure Password"
                         aria-label="Generated Password"></textarea>
                     Password Length: <input type="number" id="amount" value="8" min="8" max="128"/> <br/>
+                    Lowercase:<input type="checkbox" id="lower"/>
                     Uppercase:<input type="checkbox" id="upper"/>
                     Numbers:<input type="checkbox" id="number"/>
                     Symbols:<input type="checkbox" id="symbol"/><br/>
